--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "xinetd"]
 	path = xinetd
 	url = https://github.com/puppetlabs/puppetlabs-xinetd.git
+[submodule "stdlib"]
+	path = stdlib
+	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
